manifests/talos/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: kube-system
spec:
  rules:
  - host: headlamp.gangsterkitties.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: headlamp
            port:
              number: 80
  tls:
  - hosts:
      - headlamp.gangsterkitties.com
